--- a/public/css/post_comment.css
+++ b/public/css/post_comment.css
@@ -6,7 +6,7 @@ a {
     color:#000;
 }
 a:hover{
-    text-decoration: none;
+    text-decoration: none !important;
 }
 .about_details h5{
     margin: 15px 0 0 0;
